...
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/scoresTabLayout"
        android:layout_width="match_parent"
        android:layout_below="@+id/leaderBoardTop"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabTextColor="@color/light_gray"
...
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:text="All-time"  android:layout_height="wrap_content" android:layout_width="wrap_content"/>

        <com.google.android.material.tabs.TabItem
            android:text="Monthly" android:layout_height="wrap_content" android:layout_width="wrap_content"/>

        <com.google.android.material.tabs.TabItem
            android:text="Weekly" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/leaderboardViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/scoresTabLayout"/>
...
